# filemanagement_user_file_service

./: CODEOWNERS  FAF-introduce.md  OAT.xml  README_zh.md  bundle.json  cfi_blocklist.txt  filemanagement_aafwk.gni  ohos.build  picker.diff  publicity.xml
frameworks/innerkits/: BUILD.gn
frameworks/innerkits/file_access/: BUILD.gn
frameworks/innerkits/file_extension/: BUILD.gn
frameworks/innerkits/file_extension_hap/: package-lock.json  package.json
frameworks/innerkits/signature/: fileextension.p7b
interfaces/inner_api/cloud_disk_kit_inner/: BUILD.gn
interfaces/inner_api/file_access/: BUILD.gn  IFileAccessExtBase.idl  libfile_access_extension_ability_kit.map
interfaces/kits/js/: BUILD.gn
interfaces/kits/picker/: BUILD.gn  native_module_ohos_picker.cpp  picker.js
services/: 5010.json  5010.xml  BUILD.gn  IFileAccessObserver.idl  IFileAccessServiceBase.idl  NotifyType.idl  file_access_service.cfg  file_access_service.para  file_access_service.para.dac  libfile_access_service.map
services/etc/: fms_service.cfg
services/file_extension_hap/: BUILD.gn  build-profile.json5  oh-package-lock.json5  oh-package.json5
services/file_extension_hap/AppScope/: app.json  app.json5
services/file_extension_hap/entry/: hvigorfile.js
services/include/: file_manager_service_def.h  file_manager_service_errno.h  log.h  storage_manager_inf.h
services/rdb_adapter/include/: ufs_db_services_constants.h  ufs_rdb_adapter.h
services/rdb_adapter/src/: ufs_db_services_constants.cpp  ufs_rdb_adapter.cpp
services/sa_profile/: 5010.xml  BUILD.gn
services/signature/: fileextension.p7b
services/src/client/: file_manager_proxy.cpp  file_manager_proxy.h  ifms_client.h
services/src/fileoper/: cmd_options.h  cmd_response.h  external_storage_oper.cpp  external_storage_oper.h  external_storage_utils.cpp  external_storage_utils.h  file_info.cpp  file_info.h  file_oper.h  media_file_oper.cpp  media_file_oper.h  media_file_utils.cpp  media_file_utils.h  oper_factory.cpp  oper_factory.h
services/src/server/: file_manager_service.cpp  file_manager_service.h  file_manager_service_stub.cpp  file_manager_service_stub.h
services/test/: BUILD.gn
services/test/client/: file_manager_proxy_test.cpp  fms_manager_proxy_mock.h
services/test/fileoper/: oper_factory_test.cpp
services/test/server/: file_manager_service_test.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/externalfileaccess_fuzzer/: BUILD.gn  external_file_access_fuzzer.cpp
test/fuzztest/externalfileaccessaccess_fuzzer/: BUILD.gn  externalfileaccessaccess_fuzzer.cpp  externalfileaccessaccess_fuzzer.h
test/fuzztest/externalfileaccesscreate_fuzzer/: BUILD.gn  externalfileaccesscreate_fuzzer.cpp  externalfileaccesscreate_fuzzer.h
test/fuzztest/externalfileaccesscreatefile_fuzzer/: BUILD.gn  externalfileaccesscreatefile_fuzzer.cpp  externalfileaccesscreatefile_fuzzer.h
test/fuzztest/externalfileaccesscreator_fuzzer/: BUILD.gn  external_file_access_creator_fuzzer.cpp  external_file_access_creator_fuzzer.h
test/fuzztest/externalfileaccessdelete_fuzzer/: BUILD.gn  externalfileaccessdelete_fuzzer.cpp  externalfileaccessdelete_fuzzer.h
test/fuzztest/externalfileaccessdeletefile_fuzzer/: BUILD.gn  externalfileaccessdeletefile_fuzzer.cpp  externalfileaccessdeletefile_fuzzer.h
test/fuzztest/externalfileaccessgetfileinfofromrelativepath_fuzzer/: BUILD.gn  externalfileaccessgetfileinfofromrelativepath_fuzzer.cpp  externalfileaccessgetfileinfofromrelativepath_fuzzer.h
test/fuzztest/externalfileaccessgetfileinfofromuri_fuzzer/: BUILD.gn  externalfileaccessgetfileinfofromuri_fuzzer.cpp  externalfileaccessgetfileinfofromuri_fuzzer.h
test/fuzztest/externalfileaccessgetroots_fuzzer/: BUILD.gn  externalfileaccessgetroots_fuzzer.cpp  externalfileaccessgetroots_fuzzer.h
test/fuzztest/externalfileaccessgetthumbnail_fuzzer/: BUILD.gn  externalfileaccessgetthumbnail_fuzzer.cpp  externalfileaccessgetthumbnail_fuzzer.h
test/fuzztest/externalfileaccesslistfile_fuzzer/: BUILD.gn  externalfileaccesslistfile_fuzzer.cpp  externalfileaccesslistfile_fuzzer.h
test/fuzztest/externalfileaccesslistfilepartone_fuzzer/: BUILD.gn  external_file_access_listfile_fuzzer.cpp  external_file_access_listfile_fuzzer.h
test/fuzztest/externalfileaccessmkdir_fuzzer/: BUILD.gn  externalfileaccessmkdir_fuzzer.cpp  externalfileaccessmkdir_fuzzer.h
test/fuzztest/externalfileaccessmkdirpartone_fuzzer/: BUILD.gn  external_file_access_mkdir_fuzzer.cpp  external_file_access_mkdir_fuzzer.h
test/fuzztest/externalfileaccessmove_fuzzer/: BUILD.gn  externalfileaccessmove_fuzzer.cpp  externalfileaccessmove_fuzzer.h
test/fuzztest/externalfileaccessmovefile_fuzzer/: BUILD.gn  externalfileaccessmovefile_fuzzer.cpp  externalfileaccessmovefile_fuzzer.h
test/fuzztest/externalfileaccessopenfile_fuzzer/: BUILD.gn  externalfileaccessopenfile_fuzzer.cpp  externalfileaccessopenfile_fuzzer.h
test/fuzztest/externalfileaccessopenfilepartone_fuzzer/: BUILD.gn  external_file_access_openfile_fuzzer.cpp  (+1 more)
test/unittest/: BUILD.gn  abnormal_file_access_test.cpp  cloud_disk_comm_test.cpp  cloud_disk_js_manager_test.cpp  cloud_disk_service_test.cpp  cloud_disk_sync_folder_manager_test.cpp  cloud_disk_synchronous_root_manager_test.cpp  external_file_access_test.cpp  external_file_access_test.h  external_file_access_test_basic.cpp  external_file_access_test_basic.h  external_file_access_test_info.cpp  external_file_access_test_management.cpp  external_file_access_test_operations.cpp  external_notify_test.cpp  file_access_ext_stub_impl_other_test.cpp  file_access_ext_stub_impl_test.cpp  file_access_service_proxy_test.cpp  file_access_service_test.cpp  js_file_access_ext_ability_ex_test.cpp  js_file_access_ext_ability_ext_test.cpp  js_file_access_ext_ability_lambda_test.cpp  js_file_access_ext_ability_other_test.cpp  js_file_access_ext_ability_test.cpp  medialibrary_file_access_test.cpp  medialibrary_file_access_test_basic.cpp  medialibrary_file_access_test_basic.h  medialibrary_file_access_test_info.cpp  notify_work_service_test.cpp  ufs_rdb_adapter_test.cpp  urie_test.cpp
(+453 files in other folders)
