# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_path = "//foundation/ability/ability_runtime"
file_api_path = "//foundation/filemanagement/file_api"
user_file_service_path = "//foundation/filemanagement/user_file_service"
commonlibrary_path = "//commonlibrary"

declare_args() {
    picker_udmf_enabled = true
    if (defined(global_parts_info) && !defined(global_parts_info.distributeddatamgr_udmf)) {
        picker_udmf_enabled = false
    }
    user_file_service_cloud_disk_enable = false
}