# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("frameworks_innerkits") {
  deps = [
    ":file_extension_hap",
    "file_extension:file_extension_ability_kit",
    "file_extension:file_extension_ability_module",
  ]
}

#### file extension hap
ohos_hap("file_extension_hap") {
  hap_profile = "file_extension_hap/entry/src/main/module.json"
    deps = [
    ":file_extension_js_assets",
    ":file_extension_resources",
  ]
  certificate_profile = "signature/fileextension.p7b"
  hap_name = "file_extension"
  subsystem_name = "filemanagement"
  part_name = "user_file_service"
  module_install_dir = "app/com.ohos.FileExtension"
}

ohos_js_assets("file_extension_js_assets") {
  hap_profile = "file_extension_hap/entry/src/main/module.json"
  ets2abc = true
  source_dir = "file_extension_hap/entry/src/main/ets"
}

ohos_app_scope("file_extension_app_profile") {
  app_profile = "file_extension_hap/AppScope/app.json"
  sources = [ "file_extension_hap/AppScope/resources" ]
}

ohos_resources("file_extension_resources") {
  sources = [
    "file_extension_hap/entry/src/main/resources",
  ]
  deps = [
    ":file_extension_app_profile",
  ]
  hap_profile = "file_extension_hap/entry/src/main/module.json"
}
#### file extension hap