# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
FMS_BASE_DIR = "//foundation/filemanagement/user_file_service/services"
ohos_unittest("file_manager_proxy_test") {
  module_out_path = "filemanagement/user_file_service"

  sources = [ "client/file_manager_proxy_test.cpp" ]

  include_dirs = [
    "//third_party/json/include",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
    "$FMS_BASE_DIR/include",
    "$FMS_BASE_DIR/src/client",
    "$FMS_BASE_DIR/src/server",
    "$FMS_BASE_DIR/src/fileoper",
    "//third_party/googletest/googlemock/include/gmock",
    "//foundation/multimedia/media_library/interfaces/inner_api/media_library_helper/include",
  ]

  configs = [ "//build/config/compiler:exceptions" ]

  deps = [
    "$FMS_BASE_DIR:fms_server",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("oper_factory_test") {
  module_out_path = "filemanagement/user_file_service"

  sources = [ "fileoper/oper_factory_test.cpp" ]

  include_dirs = [
    "//third_party/json/include",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
    "$FMS_BASE_DIR/include",
    "$FMS_BASE_DIR/src/client",
    "$FMS_BASE_DIR/src/server",
    "$FMS_BASE_DIR/src/fileoper",
    "//foundation/multimedia/media_library/interfaces/inner_api/media_library_helper/include",
  ]

  configs = [ "//build/config/compiler:exceptions" ]

  deps = [
    "$FMS_BASE_DIR:fms_server",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("file_manager_service_test") {
  module_out_path = "filemanagement/user_file_service"

  sources = [ "server/file_manager_service_test.cpp" ]

  include_dirs = [
    "//third_party/json/include",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
    "$FMS_BASE_DIR/include",
    "$FMS_BASE_DIR/src/client",
    "$FMS_BASE_DIR/src/server",
    "$FMS_BASE_DIR/src/fileoper",
    "//foundation/multimedia/media_library/interfaces/inner_api/media_library_helper/include",
  ]

  configs = [ "//build/config/compiler:exceptions" ]
  deps = [
    "$FMS_BASE_DIR:fms_server",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("user_file_manager_test") {
  testonly = true

  deps = [
    ":file_manager_proxy_test",
    ":file_manager_service_test",
    ":oper_factory_test",
  ]
}
