# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("user_file_service_fuzz_test") {
  testonly = true

  deps = [
    "externalfileaccess_fuzzer:ExternalFileAccessFuzzTest",
    "externalfileaccessaccess_fuzzer:ExternalFileAccessAccessFuzzTest",
    "externalfileaccesscreatefile_fuzzer:ExternalFileAccessCreateFileFuzzTest",
    "externalfileaccessdelete_fuzzer:ExternalFileAccessDeleteFuzzTest",
    "externalfileaccessgetfileinfofromrelativepath_fuzzer:ExternalFileAccessGetFileInfoFromRelativePathFuzzTest",
    "externalfileaccessgetfileinfofromuri_fuzzer:ExternalFileAccessGetFileInfoFromUriFuzzTest",
    "externalfileaccessgetroots_fuzzer:ExternalFileAccessGetRootsFuzzTest",
    "externalfileaccesslistfile_fuzzer:ExternalFileAccessListFileFuzzTest",
    "externalfileaccessmkdir_fuzzer:ExternalFileAccessMkdirFuzzTest",
    "externalfileaccessmove_fuzzer:ExternalFileAccessMoveFuzzTest",
    "externalfileaccessopenfile_fuzzer:ExternalFileAccessOpenFileFuzzTest",
    "externalfileaccessrename_fuzzer:ExternalFileAccessRenameFuzzTest",
    "externalfileaccessscanfile_fuzzer:ExternalFileAccessScanFileFuzzTest",
    "fileaccessextstub_fuzzer:FileAccessExtStubFuzzTest",
    "fileaccessservicestub_fuzzer:FileAccessServiceStubFuzzTest",
  ]
}
